<resources>
    <string name="app_name">Repair Calculator</string>
    <string name="date_period" translatable="false">%1$s - %2$s</string>
    <string name="search_projects">Search projects</string>
    <string name="project_name">Project name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="rooms">Rooms</string>
    <string name="statistics">Statistics</string>
    <string name="materials">Materials</string>
    <string name="password">Password</string>
    <string name="sing_in">Sing in</string>
    <string name="sign_up">Sing up</string>
    <string name="login">Login</string>
    <string name="shared_preferences_key" translatable="false">user_id</string>
    <string name="put_field">Fill in the login and password fields</string>
    <string name="in_progress">In progress</string>
    <string name="freeze">Freeze</string>
    <string name="finished">Finished</string>
    <string name="not_started">Not started</string>
    <string name="new_project">New project</string>
    <string name="log_out">Log out</string>
    <string name="title">Title</string>
    <string name="date_start">Start date</string>
    <string name="end_date">End date</string>
    <string name="address">Address</string>
    <string name="add">Add</string>
    <string name="select_date_start">Select date start</string>
    <string name="select_date_end">Select date end</string>
    <string name="description">Description</string>
    <string name="add_img" translatable="false" />
    <string name="add_image">Add image</string>
    <string name="take_picture">Take picture</string>
    <string name="take_picture_description">Take picture description</string>
    <string name="uah_amount_placeholder" translatable="false">%s ₴</string>
    <string name="ok_button_title" translatable="false">OK</string>
    <string name="add_text">Add text</string>
    <string name="new_note">New note</string>
    <string name="new_room">New room</string>
    <string name="projects">Projects</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="add_new_price">Add new price</string>
    <string name="price">Price</string>
    <string name="no_title">No title</string>
    <string name="room_name">Room name</string>
    <string name="room_height">Room height</string>
    <string name="room_square">Room square</string>
    <string name="num_rooms">Number of rooms</string>
    <string name="num_notes">Number of notes</string>
    <string name="full_price">Full price</string>
    <string name="date_progress">Date progress</string>
    <string name="add_item">Add item</string>
    <string name="count">Count</string>
    <string name="new_material">New material</string>
    <string name="result">Result</string>
    <string name="plan">Plan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="table">Table</string>
    <string name="click_for_details">Click for details</string>
    <string name="statistics_by_room">Statistics by room</string>
    <string name="statistics_by_rooms">Statistics by rooms</string>
    <string name="show_full_table">Show full table</string>
    <string name="add_new_stage">Add new stage</string>
    <string name="input_dates">Input date when stage is start and end</string>
    <string name="profile">Profile</string>
    <string name="stages">Stages</string>
    <string name="edit_project">Edit project</string>
    <string name="update_status">Update status</string>
</resources>