<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="Notes"
    app:startDestination="@id/roomsFragment">

    <fragment
        android:id="@+id/roomsFragment"
        android:name="com.example.repaircalculator.ui.screen.rooms.RoomsFragment"
        android:label="@string/rooms"
        tools:layout="@layout/fragment_rooms">
        <action
            android:id="@+id/action_roomsFragment_to_notesFragment"
            app:destination="@id/notesFragment" />
        <action
            android:id="@+id/action_roomsFragment_to_newRoomFragment"
            app:destination="@id/newRoomFragment" />
    </fragment>
    <fragment
        android:id="@+id/materialsFragment"
        android:name="com.example.repaircalculator.ui.screen.materials.MaterialsFragment"
        android:label="@string/materials"
        tools:layout="@layout/fragment_materials" >
        <action
            android:id="@+id/action_materialsFragment_to_noteFragment"
            app:destination="@id/noteFragment" />
    </fragment>
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.example.repaircalculator.ui.screen.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/noteFragment"
        android:name="com.example.repaircalculator.ui.screen.note.NoteFragment"
        android:label="Note"
        tools:layout="@layout/fragment_note">
        <argument
            android:name="noteId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/notesFragment"
        android:name="com.example.repaircalculator.ui.screen.notes.NotesFragment"
        android:label="Notes">
        <argument
            android:name="roomId"
            app:argType="integer" />
        <action
            android:id="@+id/action_notesFragment_to_noteFragment"
            app:destination="@id/noteFragment" />
    </fragment>
    <fragment
        android:id="@+id/newRoomFragment"
        android:name="com.example.repaircalculator.ui.screen.newRoom.NewRoomFragment"
        android:label="@string/new_room">
        <argument
            android:name="projectId"
            app:argType="integer" />
    </fragment>
</navigation>