<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.note.NoteFragment">

    <!--    <EditText-->
    <!--        android:id="@+id/note_description_et"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@null"-->
    <!--        android:hint="@string/description"-->
    <!--        android:padding="16dp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/note_title_et" />-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:id="@+id/name_table_ll"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/border_background"
                android:columnCount="4"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/title_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:layout_weight="0.4"
                    android:background="@drawable/border_background"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:text="@string/title"
                    android:textColor="@color/mine_shaft"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/count_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:background="@drawable/border_background"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="12dp"

                    android:singleLine="true"

                    android:text="@string/count"
                    android:textColor="@color/mine_shaft"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/price_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:background="@drawable/border_background"
                    android:fontFamily="@font/roboto_medium"

                    android:padding="12dp"
                    android:singleLine="true"
                    android:text="@string/price"
                    android:textColor="@color/mine_shaft"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/full_price_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@drawable/border_background"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:text="@string/full_price"
                    android:textColor="@color/mine_shaft"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/materials_list_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name_table_ll" />

            <TextView
                android:id="@+id/result_materials_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:fontFamily="@font/roboto_medium"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/result"
                android:textColor="@color/mine_shaft"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/materials_list_rv"
                app:layout_constraintTop_toBottomOf="@+id/materials_list_rv" />

            <TextView
                android:id="@+id/price_materials_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:fontFamily="@font/roboto_medium"
                android:padding="12dp"
                android:singleLine="true"
                android:textColor="@color/mine_shaft"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/materials_list_rv"
                app:layout_constraintTop_toBottomOf="@+id/materials_list_rv"
                tools:text="2345" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>